[package]
name = "rio-dapp-dcl"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", features = ["derive"], default-features = false }
impl-trait-for-tuples = "0.1.2"

# substrate
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
# substrate runtime module
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
pallet-timestamp = { version = "2.0.0", default-features = false }
pallet-sudo = { version = "2.0.0", default-features = false }

# rio runtime module
rio-support = { path = "../../support", default-features = false }
rio-assets = { path = "../../assets", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0" }
sp-core = { version = "2.0.0" }
indices = { package = "pallet-indices", version = "2.0.0" }
collective = { package = "pallet-collective", version = "2.0.0" }
payment = { package = "rio-payment", path = "../../payment" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",

    "sp-std/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-sudo/std",

    "rio-support/std",
    "rio-assets/std",
]

