[package]
name = "rio-gateway-rpc"
version = "0.1.0"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0" }
serde = { version = "1.0.101", features = ["derive"] }
jsonrpc-core = { version = "15.0.0", features = ["arbitrary_precision"] }
jsonrpc-core-client = { version = "15.0.0", features = ["arbitrary_precision"] }
jsonrpc-derive = "15.0.0"
hex = "0.4"

sp-api = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }
sp-blockchain = { version = "2.0.0" }

rio-gateway-rpc-runtime-api = { path = "runtime-api" }
