[package]
name = "rio-gateway-rpc-runtime-api"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

sp-api = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }

rio-gateway = { path = "../../", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",

    "sp-api/std",
    "sp-std/std",
    "sp-runtime/std",

    "rio-gateway/std",
]
